gcc/testsuite/rust/rustc/ui/regions/regions-pattern-typing-issue-19552.rs
fn assert_static<T: 'static>(_t: T) {}

fn main() {
    let line = String::new();
    match [&*line] { // { dg-error ".E0597." "" { target *-*-* } }
        [ word ] => { assert_static(word); }
    }
}

